Modified Android Learning Course

--- a/index.html
+++ b/index.html
@@ -37,20 +37,15 @@
   </header>
   <main class="text-black fs-5 lh-2">
     <div class="container px-4 py-5 my-5 text-center align-middle">
-      <h1 class="display-5 fw-light text-body-emphasis">Học miễn phí, mỗi ngày</h1>
+      <h1 class="display-5 fw-light text-body-emphasis">Learn something new, everyday</h1>
       <div class="col-lg-8 mx-auto">
-        <p class="my-4 pb-3 lh-3">Với nguồn tài liệu học khổng lồ được sưu tầm và chọn lọc bởi các tình nguyện viên, nơi
-          mọi người có thể giúp việc học một kĩ năng mới của bản thân bớt áp lực và mệt mỏi đi rất nhiều</p>
+        <p class="my-4 pb-3 lh-3">Just a simple website that helps you learn, easier.</p>
         <!-- d-grid - in smaller screen size -> each buttons take 12 col -->
         <div class="justify-content-sm-center">
           <button type="button" class="btn btn-primary btn-lg px-5" onclick="location.href='/vindemy/pages/courses.html'">Bắt đầu</button>
         </div>
       </div>
     </div>
-
-    <div class="block_divider"></div>
-
-
 
 </body>
 
